k8s-old/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: ineutrono/ecm-user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
    - port: 9002
      targetPort: 9002
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
  template:
    metadata:
      labels:
        app: accounts-db
    spec:
      containers:
        - name: accounts-db
          image: postgres:15
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-db
spec:
  selector:
    app: accounts-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
