k8s-old/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: ineutrono/ecm-cart-service
          ports:
            - containerPort: 9003
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - port: 9003
      targetPort: 9003
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-db
  template:
    metadata:
      labels:
        app: cart-db
    spec:
      containers:
        - name: cart-db
          image: postgres:15
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: cart-db
spec:
  selector:
    app: cart-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
