k8s-old/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: ineutrono/ecm-payment-service:latest
          ports:
            - containerPort: 9005
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
    - port: 9005
      targetPort: 9005
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-db
  template:
    metadata:
      labels:
        app: payment-db
    spec:
      containers:
        - name: payment-db
          image: postgres:15
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: payment-db
spec:
  selector:
    app: payment-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
